Terminando o metodo de buscar as informações da pessoas adicionais nas classes pessoaService, e controller